--- a/ublox_gps/config/zed_f9k_mec.yaml
+++ b/ublox_gps/config/zed_f9k_mec.yaml
@@ -1,8 +1,8 @@
-# Configuration Settings for ZED-F9P device
+# Configuration Settings for ZED-F9K device
 
 debug: 1                    # Range 0-4 (0 means no debug statements will print)
 
-device: /dev/ttyACM1
+device: /dev/ttyACM0
 frame_id: gps
 
 uart1:
@@ -21,12 +21,16 @@ gnss:
 # Enable u-blox message publishers
 publish:
   all: false
+  aid:
+    eph: true
   nav:
     all: true
     relposned: true
     posllh: true
     posecef: true
+    pvt: true
   esf:
+    alg: false
     ins: true
     meas: true
 
